--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@apollo/server": "^4.9.5",
     "@prisma/client": "^5.7.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.7.1",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.4",
